feat: se implementan validaciones formulario registro mecanicos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div id="wrapper">
-    <app-header></app-header>
+    <app-header class="bg-gradient-primary"></app-header>
     <div id="content-wrapper" class="d-flex flex-column">
         <div id="content">
             <app-topbar></app-topbar>
