--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,7 +1,4 @@
-<!-- Sidebar -->
-<ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
-
-    <!-- Sidebar - Brand -->
+<ul class="navbar-nav sidebar sidebar-dark accordion" id="accordionSidebar">
     <a class="sidebar-brand d-flex align-items-center justify-content-center" routerLink="mechanic">
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fa fa-bus" aria-hidden="true"></i>
@@ -9,18 +6,14 @@
         <div class="sidebar-brand-text mx-3">Car Center <sup></sup></div>
     </a>
 
-    <!-- Divider -->
     <hr class="sidebar-divider my-0">
 
-    <!-- Divider -->
     <hr class="sidebar-divider">
 
-    <!-- Heading -->
     <div class="sidebar-heading">
         Opciones
     </div>
 
-    <!-- Nav Item - Charts -->
     <li class="nav-item">
         <a class="nav-link" routerLink="mechanic">
             <i class="fa fa-wrench" aria-hidden="true"></i>
@@ -28,7 +21,6 @@
         </a>
     </li>
 
-    <!-- Nav Item - Tables -->
     <li class="nav-item">
         <a class="nav-link" routerLink="assignment">
             <i class="fas fa-fw fa-table"></i>
